--- a/ive/css/ive.css
+++ b/ive/css/ive.css
@@ -26,3 +26,14 @@
 .sidebar h2{
     color: orange;
 }
+.region-bottom-wide{
+    background: green;
+    border: 1px solid #ccc;
+    margin: 10px;
+    padding: 20px;
+    text-align: center;
+    color: white;
+}
+.region-bottom-wide a{
+    color: white;
+}
