--- a/ive/templates/node--article--teaser.html.twig
+++ b/ive/templates/node--article--teaser.html.twig
@@ -67,7 +67,7 @@
  */
 #}
 {%
-    set classes = [
+  set classes = [
     'node',
     'node--type-' ~ node.bundle|clean_class,
     node.isPromoted() ? 'node--promoted',
@@ -75,29 +75,35 @@
     not node.isPublished() ? 'node--unpublished',
     view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
     'clearfix',
-]
+  ]
 %}
 {{ attach_library('classy/node') }}
+{{ attach_library('ive/article_teaser') }}
 <article{{ attributes.addClass(classes) }}>
   <header>
-      {{ title_prefix }}
-      {% if label and not page %}
-        <h2{{ title_attributes.addClass('node__title') }}>
-          <a href="{{ url }}" rel="bookmark">{{ label }}</a>
-        </h2>
-      {% endif %}
-      {{ title_suffix }}
-      {% if display_submitted %}
-        <div class="node__meta">
-            {{ author_picture }}
-          <span{{ author_attributes }}>
+    {{ title_prefix }}
+    {% if not page %}
+      <h2{{ title_attributes.addClass('node__title') }}>
+        <a href="{{ url }}" rel="bookmark">{{ label }}</a>
+      </h2>
+    {% endif %}
+    {{ title_suffix }}
+    {% if display_submitted %}
+      <div class="node__meta">
+        {{ author_picture }}
+        <span{{ author_attributes }}>
           {% trans %}Submitted by {{ author_name }} on {{ date }}{% endtrans %}
         </span>
-            {{ metadata }}
-        </div>
-      {% endif %}
+        {{ metadata }}
+      </div>
+    {% endif %}
   </header>
   <div{{ content_attributes.addClass('node__content', 'clearfix') }}>
-      {{ content }}
+    <div>{{ content.field_tags }}</div>
+    <div class="flex-container">
+      <div>{{ content.field_image }}</div>
+      <div>{{ content.body }}</div>
+    </div>
+    {{ content|without('field_image', 'field_tags', 'links', 'body') }}
   </div>
 </article>
